--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-3">
           <div class="space-y-1">
             <h2 class="text-lg sm:text-xl font-bold text-gray-900">Order printing services quickly via WhatsApp</h2>
-            <p class="text-xs sm:text-sm text-gray-600">Select a category, pick a product, choose quantity and send your order with one tap.</p>
+            <p class="text-xs sm:text-sm text-gray-600">Select a category, pick a product, choose quantity and send your order with one tap 50% deposit!.</p>
           </div>
 
           <div class="flex-1">
@@ -152,7 +152,7 @@
                   <a :href="buildWhatsAppLink(product)" target="_blank" rel="noopener"
                      class="flex-1 inline-flex items-center justify-center gap-1 px-3 py-2 bg-primary hover:bg-green-700 text-white rounded-lg shadow-sm text-xs sm:text-sm transition">
                     <svg class="w-4 h-4" viewBox="0 0 24 24" fill="none"><path d="M21 12.05C21 17.05 16.97 21 12 21a8.93 8.93 0 0 1-4.56-1.19L3 20l1.35-5.29A8.91 8.91 0 0 1 3 12.05C3 7.05 7.03 3.1 12 3.1S21 7.05 21 12.05z" fill="currentColor"/><path d="M17.1 14.5c-.3-.15-1.75-.86-2.02-.96-.27-.1-.47-.15-.67.15-.2.3-.77.96-.95 1.16-.18.2-.36.22-.66.07-.3-.15-1.26-.46-2.4-1.48-.89-.79-1.48-1.78-1.65-2.08-.17-.3-.02-.46.13-.61.13-.13.3-.35.45-.52.15-.17.2-.3.3-.5.1-.2 0-.38-.02-.53-.02-.15-.67-1.6-.92-2.2-.24-.57-.48-.5-.66-.51l-.56-.01c-.2 0-.52.07-.8.34-.28.27-1.08 1.05-1.08 2.56 0 1.5 1.1 2.96 1.25 3.17.15.2 2.15 3.4 5.21 4.77 3.05 1.36 3.05.9 3.6.85.57-.05 1.75-.72 2-1.42.25-.7.25-1.3.18-1.42-.07-.12-.27-.2-.57-.35z" fill="#fff"/></svg>
-                    Order Now
+                    Order via Whatsapp
                   </a>
 
                   <button @click="copySummary(product)" class="px-2 py-2 border rounded-lg text-xs sm:text-sm hover:bg-gray-50 transition">
