Updated order instructions: streamlined wording for product selection, quantity, and one-tap ordering with 50% deposit

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-3">
           <div class="space-y-1">
             <h2 class="text-lg sm:text-xl font-bold text-gray-900">Order printing services quickly via WhatsApp</h2>
-            <p class="text-xs sm:text-sm text-gray-600">Select a category, pick a product, choose quantity and send your order with one tap 50% deposit!.</p>
+            <p class="text-xs sm:text-sm text-gray-600">Select a category, choose your product and quantity, then place your order with one tap — only a 50% deposit required.</p>
           </div>
 
           <div class="flex-1">
